--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <div id="text">My current favourite song is <a href="https://www.youtube.com/watch?v=o95ISJVN44A">My fav song</a></div>
     <script type="text/javascript" src="./script.js">
 </script>
 
